--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -36,3 +36,19 @@ jobs:
           min-coverage-overall: 65
           min-coverage-changed-files: 65
           update-comment: true
+      - name: SonarQube Scan
+        jobs:
+          sonarqube:
+            name: SonarQube Trigger
+            runs-on: ubuntu-latest
+            steps:
+              - name: Checking out
+                uses: actions/checkout@master
+                with:
+                  # Disabling shallow clone is recommended for improving relevancy of reporting
+                  fetch-depth: 0
+              - name: SonarQube Scan
+                uses: kitabisa/sonarqube-action@v1.2.0
+                with:
+                  host: ${{ secrets.SONARQUBE_HOST }}
+                  login: ${{ secrets.SONARQUBE_TOKEN }}
