--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
 	id 'jacoco'
-	id 'org.sonarqube' version "2.8"
+	id 'org.sonarqube' version '2.8'
 }
 
 group = 'com.klindziuk.sas'
