--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ jacocoTestReport {
 
 sonarqube {
 	properties {
+		property "sonar.organization", "klindziukp-github"
 		property "sonar.projectKey", "klindziukp_sas-pipeline"
 		property "sonar.exclusions", "**/apiclient/**,**/config/**,**/constant/**,**/exception/**,**/model/**,**/util/**,**/PipelineApplication.java"
 	}
