SAS-PIPELINE: Add sonar integration

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,6 @@ sonarqube {
 	properties {
 		property "sonar.organization", "klindziukp-github"
 		property "sonar.projectKey", "klindziukp_sas-pipeline"
-		property "sonar.exclusions", "**/apiclient/**,**/config/**,**/constant/**,**/exception/**,**/model/**,**/util/**,**/PipelineApplication.java"
+		property "sonar.exclusions", "**/apiclient/**,**/config/**,**/constant/**,**/exception/**,**/model/**,**/PipelineApplication.java"
 	}
 }
