SAS-PIPELINE: Add sonar integration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,7 @@ sonar.organization=klindziukp-github
 sonar.projectKey=klindziukp_sas-pipeline
 sonar.projectName=sas-pipeline
 sonar.projectVersion=1.0
+sonar.language=java
+sonar.java.binaries=target/classes
 
 sonar.coverage.jacoco.xmlReportPaths=/build/reports/jacoco/test/jacocoTestReport.xml
