--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,5 @@ sonar.projectKey=klindziukp_sas-pipeline
 sonar.projectName=sas-pipeline
 sonar.projectVersion=1.0
 sonar.language=java
-sonar.java.binaries=target/classes
-
+sonar.java.binaries= **/*.java
 sonar.coverage.jacoco.xmlReportPaths=/build/reports/jacoco/test/jacocoTestReport.xml
