--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectKey=klindziukp_sas-pipeline
 sonar.projectName=sas-pipeline
 sonar.projectVersion=1.0
 sonar.language=java
-sonar.java.binaries=**/build/**
-sonar.coverage.jacoco.xmlReportPaths=/build/reports/jacoco/test/jacocoTestReport.xml
+sonar.java.binaries=build/classes
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
