--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 
+	testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
+	testImplementation("org.junit.jupiter:junit-jupiter-engine:5.9.0")
+	testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.0")
+	testImplementation("org.junit.platform:junit-platform-suite:1.9.0")
+
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'io.r2dbc:r2dbc-h2'
