--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,16 @@ jacocoTestReport {
 		xml.enabled true
 		html.enabled true
 	}
+	afterEvaluate {
+		classDirectories = files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+					'**/test/**',
+					'**/exception/**',
+					'**/model/**',
+					'**/*PipelineApplication*.*'
+			])
+		})
+	}
 }
 
 sonarqube {
