--- a/build.gradle
+++ b/build.gradle
@@ -49,14 +49,14 @@ jacocoTestReport {
 		html.enabled true
 	}
 	afterEvaluate {
-		classDirectories = files(classDirectories.files.collect {
+		classDirectories.setFrom(files(classDirectories.files.collect {
 			fileTree(dir: it, exclude: [
 					'**/test/**',
 					'**/exception/**',
 					'**/model/**',
 					'**/*PipelineApplication*.*'
 			])
-		})
+		}))
 	}
 }
 
