SAS-PIPELINE: Add sonar integration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectName=sas-pipeline
 sonar.projectVersion=1.0
 sonar.language=java
 sonar.java.binaries=build/classes
-sonar.coverage.exclusions=**/model/**,**/exception/**,**/test/**,**/PipelineApplication.java
+sonar.coverage.exclusions=**/model/**,src/main/resources/*,src/main/test/*,**/exception/**,**/test/**,**/PipelineApplication.java
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
