--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 group = 'com.klindziuk.sas'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 configurations {
 	compileOnly {
@@ -21,7 +21,6 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-parent'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.12'
@@ -71,10 +70,10 @@ sonarqube {
 	}
 }
 
-jar {
-	manifest {
-		attributes(
-				'Main-Class': 'com.klindziuk.sas.pipeline.PipelineApplication'
-		)
-	}
-}
+//jar {
+//	manifest {
+//		attributes(
+//				'Main-Class': 'com.klindziuk.sas.pipeline.PipelineApplication'
+//		)
+//	}
+//}
