--- a/.github/workflows/00-pr-check.yml
+++ b/.github/workflows/00-pr-check.yml
@@ -1,9 +1,9 @@
-name: Unit test CI
+name: PR check
 
 on:
   push:
     branches:
-#      - main
+      - main
   pull_request:
     branches:
       - main
