--- a/.github/workflows/01-deploy-to-heroku.yml
+++ b/.github/workflows/01-deploy-to-heroku.yml
@@ -1,7 +1,10 @@
-name: Deploy
+name: Deploy to Heroku
 
 on:
-  push:
+  workflow_run:
+    workflows: ["PR check"]
+    types:
+      - completed
     branches:
       - main
 
@@ -12,6 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
           heroku_app_name: "epl-players" #Must be unique in Heroku
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
