--- a/.github/workflows/01-deploy-to-heroku.yml
+++ b/.github/workflows/01-deploy-to-heroku.yml
@@ -17,4 +17,5 @@ jobs:
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
-          heroku_app_name: "epl-players" #Must be unique in Heroku
+          heroku_app_name: "epl-players"
+          healthcheck: "https://epl-players.herokuapp.com/health"
