--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -33,6 +33,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+test {
+    enabled = false
+}
+
 task integrationTest(type: Test) {
     useJUnitPlatform {
         includeTags "Smoke"
