SAS-PIPELINE: Add integration tests

--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -37,6 +37,10 @@ test {
     enabled = false
 }
 
+sonarqube {
+    skipProject = true
+}
+
 task integrationTest(type: Test) {
     useJUnitPlatform {
         includeTags "Smoke"
