SAS-PIPELINE: Add integration tests

--- a/.github/workflows/02-integration-test.yml
+++ b/.github/workflows/02-integration-test.yml
@@ -23,6 +23,14 @@ jobs:
       - name: Run integration tests
         run: ./gradlew integrationTest -i
 
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
       - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
         if: always()
