SAS-PIPELINE: Add LT env

--- a/.github/workflows/04-perfromance-test.yml
+++ b/.github/workflows/04-perfromance-test.yml
@@ -2,7 +2,7 @@ name: Performance Test
 
 on:
   workflow_run:
-    workflows: [ "Integration Test" ]
+    workflows: ["Deploy to Heroku LT"]
     types:
       - completed
     branches:
