SAS-PIPELINE: Add LT env

--- a/.github/workflows/00-pr-check.yml
+++ b/.github/workflows/00-pr-check.yml
@@ -37,6 +37,8 @@ jobs:
           min-coverage-changed-files: 65
           update-comment: true
   sonarqube:
+    if: ${{ success() }}
+    needs: build-and-test
     runs-on: ubuntu-latest
     steps:
       - name: SonarQube Scan
