--- a/.github/workflows/00-pr-check.yml
+++ b/.github/workflows/00-pr-check.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  quality-gate-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -36,11 +36,6 @@ jobs:
           min-coverage-overall: 65
           min-coverage-changed-files: 65
           update-comment: true
-  sonarqube:
-    if: ${{ success() }}
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    steps:
       - name: SonarQube Scan
         uses: kitabisa/sonarqube-action@v1.2.0
         with:
