SAS-PIPELINE: Add PROD env

--- a/.github/workflows/01-deploy-ci-integration-test.yml
+++ b/.github/workflows/01-deploy-ci-integration-test.yml
@@ -35,29 +35,35 @@ jobs:
       - name: Run integration tests
         run: ./gradlew integrationTest -i
 
-      - name: Get Allure history
-        uses: actions/checkout@v2
+      - name: Publish Integration Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
-        continue-on-error: true
         with:
-          ref: gh-pages
-          path: gh-pages
+          files: ${{ github.workspace }}/integration-test/build/test-results/**/*.xml
 
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        id: allure-report
-        with:
-          allure_results: ${{ github.workspace }}/integration-test/build/allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
-          keep_reports: 2
-
-      - name: Deploy report to Github Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+#      - name: Get Allure history
+#        uses: actions/checkout@v2
+#        if: always()
+#        continue-on-error: true
+#        with:
+#          ref: gh-pages
+#          path: gh-pages
+#
+#      - name: Allure Report action from marketplace
+#        uses: simple-elf/allure-report-action@master
+#        if: always()
+#        id: allure-report
+#        with:
+#          allure_results: ${{ github.workspace }}/integration-test/build/allure-results
+#          gh_pages: gh-pages
+#          allure_report: allure-report
+#          allure_history: allure-history
+#          keep_reports: 2
+#
+#      - name: Deploy report to Github Pages
+#        if: always()
+#        uses: peaceiris/actions-gh-pages@v2
+#        env:
+#          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          PUBLISH_BRANCH: gh-pages
+#          PUBLISH_DIR: allure-history
