--- a/.github/workflows/02-deploy-lt-performance-test.yml
+++ b/.github/workflows/02-deploy-lt-performance-test.yml
@@ -54,9 +54,9 @@ jobs:
           distribution: 'temurin'
       - name: Run Performance tests
         run: ./gradlew clean gatlingRun-pipeline.PlayerSimulation -i
-      - name: Annotate test results
-        uses: steviemul/gatling-annotations@v1.0
-        with:
-          name: Integration Test Results
-          report-path: ${{ github.workspace }}/performance-test/build/reports/gatling/playersimulation-*/js
-          access-token: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Annotate test results
+#        uses: steviemul/gatling-annotations@v1.0
+#        with:
+#          name: Integration Test Results
+#          report-path: ${{ github.workspace }}/performance-test/build/reports/gatling/playersimulation-*/js
+#          access-token: ${{ secrets.GITHUB_TOKEN }}
