--- a/.github/workflows/03-deploy-prod-smoke-test.yml
+++ b/.github/workflows/03-deploy-prod-smoke-test.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run integration tests
         run: ./gradlew smokeTest -i
       - name: Publish Smoke Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          files: ${{ github.workspace }}/integration-test/build/test-results/**/*.xml
+          junit_files: ${{ github.workspace }}/integration-test/build/test-results/**/*.xml
