--- a/.github/workflows/00-pr-check.yml
+++ b/.github/workflows/00-pr-check.yml
@@ -27,18 +27,18 @@ jobs:
         if: always()
         with:
           files: /home/runner/work/sas-pipeline/sas-pipeline/build/test-results/**/*.xml
-      - name: Add coverage to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.3
-        with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-          min-coverage-overall: 65
-          min-coverage-changed-files: 65
-          update-comment: true
-      - name: SonarQube Scan
-        uses: kitabisa/sonarqube-action@v1.2.0
-        with:
-          host: ${{ secrets.SONARQUBE_HOST }}
-          login: ${{ secrets.SONARQUBE_TOKEN }}
-          projectKey: "klindziukp_sas-pipeline"
+#      - name: Add coverage to PR
+#        id: jacoco
+#        uses: madrapps/jacoco-report@v1.3
+#        with:
+#          paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          min-coverage-overall: 65
+#          min-coverage-changed-files: 65
+#          update-comment: true
+#      - name: SonarQube Scan
+#        uses: kitabisa/sonarqube-action@v1.2.0
+#        with:
+#          host: ${{ secrets.SONARQUBE_HOST }}
+#          login: ${{ secrets.SONARQUBE_TOKEN }}
+#          projectKey: "klindziukp_sas-pipeline"
