--- a/.github/workflows/01-build-and-push-docker-image.yml
+++ b/.github/workflows/01-build-and-push-docker-image.yml
@@ -32,4 +32,4 @@ jobs:
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
 
       - name: Docker Push
-        run: docker push 'docker.io/library/pipeline:0.0.1-SNAPSHOT
+        run: docker push 'docker.io/library/pipeline:0.0.1-SNAPSHOT'
