--- a/.github/workflows/01-build-and-push-docker-image.yml
+++ b/.github/workflows/01-build-and-push-docker-image.yml
@@ -21,8 +21,8 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build docker image
-        run: ./gradlew clean build bootBuildImage -x test -i
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag epampavelklindziuk/sas-pipeline:tagname:0.0.1-SNAPSHOT
       - uses: actions/checkout@v2
       - name: docker login
         env:
@@ -32,4 +32,4 @@ jobs:
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
 
       - name: Docker Push
-        run: docker push 'docker.io/library/pipeline:0.0.1-SNAPSHOT'
+        run: docker push 'epampavelklindziuk/sas-pipeline:tagname:0.0.1-SNAPSHOT'
