SAS-PIPELINE: Update publisher version

--- a/.github/workflows/01-build-and-push-docker-image.yml
+++ b/.github/workflows/01-build-and-push-docker-image.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name: Build jar
+        run: ./gradlew clean build -x test
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag epampavelklindziuk/sas-pipeline:0.0.1-SNAPSHOT
       - uses: actions/checkout@v2
