--- a/.github/workflows/01-build-and-push-docker-image.yml
+++ b/.github/workflows/01-build-and-push-docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build jar
         run: ./gradlew clean build -x test
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag epampavelklindziuk/sas-pipeline:$(date +%s)
+        run: docker build . --file Dockerfile --tag epampavelklindziuk/sas-pipeline:latest
       - uses: actions/checkout@v2
       - name: docker login
         env:
@@ -33,4 +33,4 @@ jobs:
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
 
       - name: Docker Push
-        run: docker push 'epampavelklindziuk/sas-pipeline'
+        run: docker push 'epampavelklindziuk/sas-pipeline:latest'
