--- a/.github/workflows/01-build-and-push-docker-image.yml
+++ b/.github/workflows/01-build-and-push-docker-image.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-publish-docker-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
