SAS-PIPELINE: Update docker tag

--- a/.github/workflows/04-deploy-prod-smoke-test.yml
+++ b/.github/workflows/04-deploy-prod-smoke-test.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Run integration tests
+      - name: Run smoke tests
         run: ./gradlew smokeTest -i
